--- a/blog/src/main/resources/templates/blog_edit.html
+++ b/blog/src/main/resources/templates/blog_edit.html
@@ -15,6 +15,8 @@
             <input type="text" id="title" name="title">
             <label for="image">画像</label>
             <input type="file" id="image" name="image">
+            <label for="image">登録済み画像</label>
+            <img th:src="@{/blog-image/{items}(items=${blogs.blogImage})}">
             <label for="article">記事</label>
             <textarea name="" id="article" cols="65" rows="20"></textarea>
             <span>
