--- a/blog/src/main/resources/templates/blog.html
+++ b/blog/src/main/resources/templates/blog.html
@@ -22,18 +22,11 @@
     <main>
         <h1>夏の風物詩</h1>
         <section>
-            <div>
+            <div th:each="blog:${blogList}">
                 <form th:action="@{/list}" method="post">
-                    <img th:src="@{/blog-img/himawari.png}" alt="">
-                    <a href="">ひまわり</a>
-                    <p>・ひまわりひまわりひまわり</p>
-                </form>
-            </div>
-            <div>
-                <form action="" method="post">
-                    <img th:src="@{/blog-img/beach_parasol.png}" alt="">
-                    <a href="">ビーチ</a>
-                    <p>・ビーチビーチビーチ</p>
+                    <img th:src="@{/blog-img/{item}(item=${blog.image})}" alt="">
+                    <a href="@{/user/blog/edit/{blogId}(blogId=${blog.blogId})}" th:text="${blog.title}"></a>
+                    <p th:text="${blog.article}"></p>
                 </form>
             </div>
         </section>
