--- a/blog/src/main/resources/templates/blog_edit.html
+++ b/blog/src/main/resources/templates/blog_edit.html
@@ -5,24 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style_blog_edit.css">
+    <link rel="stylesheet" th:href="@{/css/style_blog_edit.css}">
 </head>
 
 <body>
     <div>
-        <form action="" method="post">
+        <form th:action="@{/account/blog/update}" method="post">
             <label for="title">タイトル</label>
-            <input type="text" id="title" name="title">
-            <label for="image">画像</label>
-            <input type="file" id="image" name="image">
+            <input type="text" id="title" name="title" th:value="${blogList.title}">
             <label for="image">登録済み画像</label>
-            <img th:src="@{/blog-image/{items}(items=${blogs.blogImage})}">
+            <img th:src="@{/blog-img/{items}(items=${blogList.image})}">
+            <button th:attr="onClick='location.href=\''+'/account/blog/image/edit/'+${blogList.blogId}+'\''">画像変更</button>
             <label for="article">記事</label>
-            <textarea name="" id="article" cols="65" rows="20"></textarea>
+            <textarea name="" id="article" cols="65" rows="20" th:text="${blogList.article}"></textarea>
             <span>
-                <input type="submit" id="submit" value="変更">
-                <input type="submit" id="submit2" value="削除">
-                <input type="submit" id="submit3" value="戻る">
+                <input type="button" id="button1" value="変更">
+                <input type="button" id="button2" value="削除">
+                <input type="button" id="button3" value="戻る" onclick="history.back();">
             </span>
         </form>
     </div>
