--- a/blog/src/main/resources/templates/blog_register.html
+++ b/blog/src/main/resources/templates/blog_register.html
@@ -18,7 +18,7 @@
             <label for="article">記事</label>
             <textarea name="article" id="article" cols="65" rows="20"></textarea>
             <span>
-                <input type="submit" id="submit" value="送信">
+                <input type="button" id="button" value="送信">
                 <input type="button" id="button3" value="戻る" onclick="history.back();">
             </span>
         </form>
