--- a/blog/src/main/resources/templates/login.html
+++ b/blog/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
             <input type="password" id="password" name="password" placeholder="Password" required>
             <input type="submit" id="submit" value="ログイン">
         </form>
-        <p>登録は<a href="register.html">こちら</a></p>
+        <p>登録は<a th:href="@{/account/register}">こちら</a></p>
     </div>
 </body>
 </html>
