--- a/blog/src/main/resources/templates/register.html
+++ b/blog/src/main/resources/templates/register.html
@@ -18,7 +18,7 @@
             <input type="password" id="password" name="password" placeholder="Password" required>
             <input type="submit" id="submit" value="新規登録">
         </form>
-        <p>ログインは<a href="login.html">こちら</a></p>
+        <p>ログインは<a th:href="@{/account/login}">こちら</a></p>
     </div>
 </body>
 </html>
