--- a/blog/src/main/resources/static/css/style_blog.css
+++ b/blog/src/main/resources/static/css/style_blog.css
@@ -14,8 +14,7 @@ h3{
 }
 ul{
     display: flex;
-    /*横幅をつける、要素同士を離す*/
-    gap:0 30px;
+    gap:0 30px;/*横幅をつける、要素同士を離す*/
     justify-content: right;
     padding: 20px 50px 20px 0;
 }
@@ -35,6 +34,7 @@ section{
     display: flex;
     gap: 0 50px;
     justify-content: center;
+    flex-wrap: wrap;/*自動的に配列*/
     margin: -60px 0 200px 0;
 }
 div{
